--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,10 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #333; /* Make default color text dark grey, subject to change of*/
-  padding-top: 60px; /*makes sure content is under navbar */
 }
 
 /* Navbar section */
-header.nav {
+.nav {
   position: fixed; /* keep navbar at top of page*/
   top: 0;
   left: 0;
@@ -26,6 +25,8 @@ header.nav {
   box-shadow: 0, 2px 6px rgba(0,0,0,0.2);
   z-index: 1000;
 }
+
+.nav .brand img
 
 /* Navbar contents */
 .navbar ul {
