--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ hr {
   box-shado: 0 4px 12px rgba(0,0,0,0.10;
 }
 
-.calendar-caption: {
+.calendar-caption {
   margin-top: 10px;
   color: #555;
   font-size: 0.95rem;
