--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 50px 10%
+  padding: 50px 10%;
   background-color: #BF5700;
   color: #fff;
 }
