--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ body {
   background: #fff;
   border-radius: 12px;
   box-shadow: 0 6px 14px rgba(0,0,0,0.12);
-  nax-width: min(560px, 90%);
+  max-width: min(560px, 90%);
 }
 .flyer-track img {
   width: 150px;
