--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,8 +155,8 @@ hr {
 }
 
 .event-track img {
-  width: 250px;
-  height: auto;
+  height: 90px;
+  width: 150px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
