--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,12 +139,13 @@ body {
   text-align: center;
   padding: 0;
   z-index: 1;
+  margin-left: 16px;
 }
 
 .next-event .section-title {
   display: block;
   margin: 0 0 8px;
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   font-weight: 700;
   color: #fff;
 }
