--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,12 +86,14 @@ body {
 .info .sub {
   font-size: 1.3rem;
   margin-bottom: 20px;
+  margin-left: -8px;
 }
 
 .info .mission {
   font-size: 1.1rem;
   margin-bottom: 30px;
   line-height: 1.8;
+  margin-left: -8px;
 }
 
 .btn {
