--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ body {
   padding: 11px 21px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   z-index: 1000;
+  height: 64px;
 }
 
 
@@ -129,7 +130,7 @@ body {
 
 /* slideshow */
 .polaroid {
-  margin-top: 8px;
+  margin-top: 28px;
   margin-left: 26px;
   margin-right: 12px;
 }
