--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,10 @@ body {
   margin-top: -2px;
 }
 
+.info + hr {
+  margin-top: 0;
+}
+
 .menu {
   display: flex;   /* make into a row*/
   gap: 20px;    /* space between menu items */
