--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,9 +38,6 @@ body {
   margin-top: -2px;
 }
 
-.info + hr {
-  margin-top: 0;
-}
 
 .menu {
   display: flex;   /* make into a row*/
@@ -248,6 +245,9 @@ hr {
   margin: 28px 10%;
 }
 
+info + hr {
+  margin-top: 0;
+}
 /* Sponsors section */
 #h2 {
   color: #BF5700;
@@ -303,7 +303,7 @@ hr {
 .calendar-caption {
   margin-top: 10px;
   color: #555;
-  font-size: 0.95rem;
+  font-size: 1.3rem;
 }
 
 
