--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ info + hr {
   border-radius: 2px;
 }
 
-.sponsor-cts {
+.sponsor-cta {
   margin: 0;
   border-radius: 10px; 
   padding: 12px 20px;
