--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,6 +242,7 @@ body {
   font-size: 1.8rem; 
 }
 
+
 hr {
   border: none;
   height: 1px;
@@ -249,19 +250,21 @@ hr {
   margin: 28px 10%;
 }
 
-info + hr {
+.info + hr {
   margin-top: 0;
 }
 
 .sponsor-header {
-  display: flex;
-  align-items: center; 
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: end;
   gap: 16px;
   margin: 0 10% 8px;
 }
 
 .sponsor-header .section-title {
+  grid-column: 2;
+  justify-self: center;
   font-size: 2.0rem;
   color: #BF5700;
   margin: 0;
