--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ hr {
 .sponsor-cta {
   grid-column: 3;
   justify-self: end;
-  margin: 0 0 0 auto !important;
+  margin-right: -12px;
 }
   
 /* Sponsors section */
