--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,6 +254,10 @@ hr {
   margin-top: 0;
 }
 
+.sponsors-slideshow + hr {
+  display: none;
+}
+
 .sponsor-header {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -280,7 +284,7 @@ hr {
 .sponsor-cta {
   grid-column: 3;
   justify-self: end;
-  margin-right: -28px;
+  margin-right: -60px;
 }
   
 /* Sponsors section */
@@ -326,6 +330,10 @@ hr {
 .calendar {
   text-align: center;
   padding: 12px 4% 48px;
+}
+
+.calendar .section-title {
+  color: #BF5700;
 }
 
 .calendar-frame {
