--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,7 @@ hr {
 
 /* ===== Footer ===== */
 .site-footer {
-  background: #12224a;           /* deep navy */
+  background: #003A70;           /* deep navy */
   color: #fff;
   padding: 40px 6% 28px;
 }
