--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,7 +368,8 @@ hr {
   text-decoration: none;
 }
 .site-footer a:hover {
-  text-decoration: underline;
+  text-decoration: none;
+  color: #E57200;
 }
 
 /* Layout */
