--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,7 @@ body {
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 6px 14px rgba(0,0,0,0.15);
+  overflow: hidden;
 }
 
 .polaroid img {
