--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,9 @@ body {
   border-radius: 10px;
   box-shadow: 0 6px 14px rgba(0,0,0,0.15);
   overflow: hidden;
+  position: relative;
+  height: 420px;
+  overflow: hidden;
 }
 
 .polaroid img {
